--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "@adonisjs/shield": "^1.0.8",
     "dotenv": "^6.1.0",
     "marked": "^0.5.2",
+    "moment": "^2.22.2",
     "nanoid": "^2.0.0",
     "sqlite3": "^4.0.4",
-    "timeago.js": "^4.0.0-beta.1",
     "xss": "^1.0.3"
   },
   "devDependencies": {},
